--- a/MAJI NDOGO PART 1.ipynb
+++ b/MAJI NDOGO PART 1.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create engine and connect to the database using the command line\n",
+    "#Create engine and connect to the database\n",
     "from sqlalchemy import create_engine\n",
     "\n",
     "engine = create_engine('mysql+pymysql://root:Kan2018/@localhost:3306/md_water_services')\n",
